fixed line jump

--- a/_sass/my-inline.scss
+++ b/_sass/my-inline.scss
@@ -13,6 +13,11 @@ h1 {
 	transition-duration: .3s
 }
 
+b {
+	color: #b37f2c;
+	transition-duration: .3s
+}
+
 a {
 	color: #b37f2c;
 	transition-duration: .3s
